--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "coin-command-center",
   "version": "0.1.0",
   "private": true,
+  "homepage": "ccc/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
